[gd_scene load_steps=3 format=2]

[ext_resource path="res://script/grenadelauncher.gd" type="Script" id=1]
[ext_resource path="res://scenes/weapons/grenadelauncher_projectile.tscn" type="PackedScene" id=2]

[node name="grenade_launcher" type="Node2D"]
script = ExtResource( 1 )

[node name="projectile_grenade1" parent="." instance=ExtResource( 2 )]

[node name="projectile_grenade2" parent="." instance=ExtResource( 2 )]

[node name="projectile_grenade3" parent="." instance=ExtResource( 2 )]

[node name="projectile_grenade4" parent="." instance=ExtResource( 2 )]

[node name="Firerate" type="Timer" parent="."]
one_shot = true

[node name="Reload" type="Timer" parent="."]
one_shot = true
